[tool.poetry]
name = "waffle-kaggle-template"
version = "0.1.0"
description = ""
authors = ["Otsuka Masato <ootsukamase@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"
numpy = "^1.23.5"
pandas = "^1.5.2"

[tool.poetry.dev-dependencies]
ipykernel = "^6.19.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
